# warp

./: Cargo.toml  LICENSE  install.sh  uninstall.sh
res/: config  style.css
src/: main.rs
